# gdocs-chat

./: .gitignore  README.md  main.py  pyproject.toml  rag.py  table.txt
examples/: agent.py  rag2.py  sematic_search.py
src/: logging.py  promts.py  schemas.py
src/config/: settings.py
src/config/data/: chroma.sqlite3
src/embeddings/: pdf_embedding.py
src/rag/: graph.py  tools.py
src/schemas/: graph.py
