[tool.poetry]
name = "confluence-langchain"
version = "0.1.0"
description = ""
authors = ["Samuel Kopecky <samuel.kopecky@heureka.group>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.27"
python-dotenv = "^1.1.1"
langchain-openai = "^0.3.32"
atlassian-python-api = "^4.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
